--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,10 @@
 cmake-build-debug/
 build/
 .idea/
+
+# .env file
+backend/.env
+
+
+# Ignore database files json
+backend/config/mysqlconfig.json
