Add new student registration form with back button and status

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(Drogon REQUIRED)
 file(GLOB_RECURSE SOURCES
         main.cpp
         src/*.cpp
-        controllers/**/*.cpp
+        controllers/*.cpp
 )
 
 # Executable
