STUD-18-hassing: Implemented hashing algo

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /src
 
 # Use MariaDB headers (avoid conflict with libmysqlclient-dev)
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    libmariadb-dev libmariadb-dev-compat \
+    libsodium-dev libmariadb-dev libmariadb-dev-compat \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy backend sources (CMakeLists.txt + src/ + config/)
@@ -12,7 +12,8 @@ COPY ./backend .
 
 # Build
 # Kept --parallel $(nproc) for efficient builds across OSes
-RUN cmake -S . -B build -DCMAKE_BUILD_TYPE=Release \
+RUN rm -rf build \
+    && cmake -S . -B build -DCMAKE_BUILD_TYPE=Release \
     && cmake --build build --parallel $(nproc)
 
 # -------- RUNTIME STAGE --------
@@ -22,6 +23,7 @@ WORKDIR /backend
 # Runtime client library
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libmariadb3 ca-certificates \
+    libsodium23 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy binary & config
@@ -31,8 +33,6 @@ COPY --from=builder /src/build/StudentManagementSystem /backend/server
 COPY ./backend/config /backend/config
 COPY ./docs /docs
 
-# Ensure executable permissions
-#RUN chmod +x /backend/server
 
 ENV PORT=8080
 EXPOSE ${PORT}
