--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -22,6 +22,9 @@
          src/*.cpp
          controllers/*.cpp
          controllers/auth/*.cpp
+         controllers/admin/*.cpp
+         controllers/handle-dashboard/*.cpp
+
  )
 
  # Executable
